# talos_robot

./: .gitignore
talos_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
talos_bringup/config/: approach_planner_full.yaml  demo_motions.yaml  joy_teleop.yaml  talos_common_hardware.yaml  talos_full_hardware.yaml  talos_leg_motions.yaml  talos_lower_body_torso_head_hardware.yaml  talos_motions.yaml
talos_bringup/config/hardware/: arm_left.yaml  arm_right.yaml  leg_left.yaml  leg_right.yaml  torso.yaml
talos_bringup/config/twist_mux/: joystick.yaml
talos_bringup/launch/: joystick_teleop.launch  play_motion.launch  talos.launch  talos_bringup.launch  talos_bringup_addons.launch  talos_preload_libraries.launch  tor_bringup.launch  twist_mux.launch
talos_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  README  package.xml
talos_controller_configuration/config/: configuration_initializer.yaml  current_limit_controllers.yaml  default_safety_parameters.yaml  init_offset_controller.yaml  joint_trajectory_controllers.yaml  offsets.yaml  tb_torque_control.yaml  walk_poses.yaml  walking_controller.yaml  walking_params.yaml  walking_specific_params.yaml
talos_controller_configuration/config/joint_trajectory_controllers/: arm_left.yaml  arm_right.yaml  gripper_left.yaml  gripper_right.yaml  head.yaml  leg_left.yaml  leg_right.yaml  torso.yaml
talos_controller_configuration/config/local_joint_control/: direct_position_control_gripper_left_joint.yaml  direct_position_control_gripper_right_joint.yaml  direct_torque_control_arm_left_1_joint.yaml  direct_torque_control_arm_left_2_joint.yaml  direct_torque_control_arm_left_3_joint.yaml  direct_torque_control_arm_left_4_joint.yaml  direct_torque_control_arm_left_5_joint.yaml  direct_torque_control_arm_left_6_joint.yaml  direct_torque_control_arm_left_7_joint.yaml  direct_torque_control_arm_right_1_joint.yaml  direct_torque_control_arm_right_2_joint.yaml  direct_torque_control_arm_right_3_joint.yaml  direct_torque_control_arm_right_4_joint.yaml  direct_torque_control_arm_right_5_joint.yaml  direct_torque_control_arm_right_6_joint.yaml  direct_torque_control_arm_right_7_joint.yaml  direct_torque_control_head_1_joint.yaml  direct_torque_control_head_2_joint.yaml  direct_torque_control_leg_left_1_joint.yaml  direct_torque_control_leg_left_2_joint.yaml  direct_torque_control_leg_left_3_joint.yaml  direct_torque_control_leg_left_4_joint.yaml  direct_torque_control_leg_left_5_joint.yaml  direct_torque_control_leg_left_6_joint.yaml  direct_torque_control_leg_right_1_joint.yaml  direct_torque_control_leg_right_2_joint.yaml  direct_torque_control_leg_right_3_joint.yaml  direct_torque_control_leg_right_4_joint.yaml  direct_torque_control_leg_right_5_joint.yaml  direct_torque_control_leg_right_6_joint.yaml  (+2 more)
talos_controller_configuration/launch/: bringup_controllers.launch  bringup_controllers_hardware.launch  current_limit_controllers.launch  default_controllers.launch  full_body_position_controllers.launch  init_offset_controller.launch  legs_position_controllers.launch  position_controllers.launch  selective_rosparam_loader.launch  send_joint_commands.launch  tor_default_controllers.launch  tor_homing_controller.launch  upper_body_position_controllers.launch  walk_pose.launch  walking_controller.launch
talos_controller_configuration/scripts/: joints_to_control.sh  talos_initialisation.py
talos_controller_configuration/utils/: Makefile  head.msg  left_arm.msg  left_leg.msg  right_arm.msg  right_leg.msg  torso.msg
talos_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
talos_description/config/: collision_parameters.yaml  default_configuration_hanging.yaml  default_configuration_locomotion.yaml  default_configuration_zeros.yaml  rviz.rviz
talos_description/gazebo/: gazebo.urdf.xacro
talos_description/launch/: talos_joint_command_rviz.launch
talos_description/meshes/: marker.STL
talos_description/robots/: talos_arm.urdf.xacro  talos_arm_right.urdf.xacro  talos_full.urdf.xacro  talos_full_fake_grippers.urdf.xacro  talos_full_no_grippers.urdf.xacro  talos_full_no_lower_arm.urdf.xacro  talos_full_v1.urdf.xacro  talos_full_v2.urdf.xacro  talos_gripper.urdf.xacro  talos_head.urdf.xacro  talos_lower_body.urdf.xacro  talos_lower_body_torso_head.urdf.xacro  talos_lower_body_v1.urdf.xacro  talos_lower_body_v2.urdf.xacro  talos_lower_body_with_torso.urdf.xacro  talos_torso.urdf.xacro  tor_arm.urdf.xacro  tor_full.urdf.xacro  tor_lower_body.urdf.xacro  tor_lower_body_v1.urdf.xacro  upload.launch  upload_arm.launch  upload_full.launch  upload_gripper.launch  upload_head.launch  upload_legs.launch  upload_legs_v2.launch  upload_talos.launch
talos_description/srdf/: talos.srdf
talos_description/test/: CMakeLists.txt  calibration_parameters.test  calibration_parameters_test.cpp  calibration_parameters_test.h  offsets_list.h  test_model_load.test  test_talos_v1.test  test_talos_v2.test
talos_description/urdf/: talos_full_common.urdf.xacro
talos_description_calibration/: CHANGELOG.rst  CMakeLists.txt  package.xml
talos_description_inertial/: CHANGELOG.rst  CMakeLists.txt  package.xml
talos_description_inertial/urdf/: inertial.xacro
talos_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
tor_bringup/: CMakeLists.txt  package.xml
tor_bringup/config/: tor_hardware.yaml
tor_bringup/launch/: tor_bringup.launch
tor_controller_configuration/: CMakeLists.txt  package.xml
tor_controller_configuration/config/: joint_trajectory_controllers.yaml  tb_sine_sweep.yaml
tor_controller_configuration/launch/: tor_homing_controller.launch
tor_description/: CMakeLists.txt  package.xml
tor_description/gazebo/: gazebo.urdf.xacro
tor_description/launch/: tor_joint_command_rviz.launch
tor_description/robots/: tor_arm.urdf.xacro  tor_full.urdf.xacro  tor_head.urdf.xacro  tor_lower_body.urdf.xacro  tor_lower_body_v2.urdf.xacro  tor_torso.urdf.xacro  upload_arm.launch  upload_full.launch  upload_head.launch  upload_legs.launch  upload_legs_v2.launch  upload_torso.launch
tor_description/urdf/: deg_to_rad.xacro
(+232 files in other folders)
