<?xml version="1.0"?>
<package>
  <name>talos_bringup</name>
  <version>1.1.30</version>
  <description>The talos_bringup package</description>

  <maintainer email="adria.roig@pal-robotics.com">Adria Roig</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>talos_controller_configuration</run_depend>
  <run_depend>talos_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>twist_mux</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>joy_teleop</run_depend>
  <run_depend>play_motion</run_depend>
  <run_depend>talos_moveit_config</run_depend>

  <export>
  </export>

</package>
