<?xml version="1.0"?>
<package>
  <name>talos_controller_configuration</name>
  <version>1.0.44</version>
  <description>The talos_controller_configuration package</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>imu_sensor_controller</run_depend>
  <run_depend>force_torque_sensor_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>walking_controller</run_depend>
  <run_depend>walking_utils</run_depend>
  <run_depend>head_action</run_depend>
  <run_depend>pal_transmissions</run_depend>
  <run_depend>reemc_init_offset_controller</run_depend>
  <run_depend>joint_torque_sensor_state_controller</run_depend>
  <run_depend>temperature_sensor_controller</run_depend>
  <run_depend>mode_state_controller</run_depend>
  <run_depend>current_limit_controller</run_depend>

  <export>
  </export>

</package>
