<?xml version="1.0"?>
<package format="3">
  <name>talos_controller_configuration</name>
  <version>1.1.30</version>
  <description>The talos_controller_configuration package</description>

  <maintainer email="adria.roig@pal-robotics.com">Adria Roig</maintainer>
  <maintainer email="ilenia.perrella@pal-robotics.com">Ilenia Perrella</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
