<?xml version="1.0"?>
<package>

  <name>talos_description_calibration</name>
  <version>1.1.30</version>
  <description>This package contains the description of the hand-eye calibration of the TALOS robot.  The files in this package are used also from the talos_description package.</description>
  <maintainer email="adria.roig@pal-robotics.com">Adria Roig</maintainer>
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>

  <export>
    <pal_configuration_pkg/>
  </export>
</package>
