<?xml version="1.0"?>
<package format="2">

  <name>talos_description_inertial</name>
  <version>1.1.30</version>
  <description>Inertial parameters of talos</description>
  <maintainer email="adria.roig@pal-robotics.com">Adria Roig</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <pal_configuration_pkg/>
  </export>
</package>
