<?xml version="1.0"?>
<package>
  <name>talos_robot</name>
  <version>1.1.28</version>
  <description>Description and launch files for the TOR robot</description>
  <maintainer email="adria.roig@pal-robotics.com">Adria Roig</maintainer>
  <license>Apache License 2.0</license>
  <author email="hilario.tome@pal-robotics.com">Hilario Tomé</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>talos_description</run_depend>
  <run_depend>talos_bringup</run_depend>
  <run_depend>talos_description_calibration</run_depend>
  <run_depend>talos_controller_configuration</run_depend>

  <export>
    <metapackage/>
  </export>
</package>

