<?xml version="1.0"?>
<package format="3">
  <name>talos_robot</name>
  <version>1.1.30</version>
  <description>Description and launch files for the TOR robot</description>
  <maintainer email="adria.roig@pal-robotics.com">Adria Roig</maintainer>
  <maintainer email="ilenia.perrella@pal-robotics.com">Ilenia Perrella</maintainer>

  <license>Apache License 2.0</license>
  <author email="hilario.tome@pal-robotics.com">Hilario Tomé</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>talos_description</exec_depend>
  <exec_depend>talos_bringup</exec_depend>
  <exec_depend>talos_description_calibration</exec_depend>
  <exec_depend>talos_controller_configuration</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

