<?xml version="1.0"?>
<package>
  <name>tor_controller_configuration</name>
  <version>0.0.0</version>
  <description>The tor_controller_configuration package</description>

  <maintainer email="hilario@todo.todo">hilario</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
  
</package>
