<?xml version="1.0"?>
<package>
  <name>tor_description</name>
  <version>0.0.0</version>
  <description>The tor_description package</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tomé</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
  
</package>
